# ksa

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  README.md  debug_config.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  secrets.example.toml
app/: main.py
app/core/database/: __init__.py  base.py  connector.py  table_schemas.py
app/core/database/crud/: user.py
app/core/database/repositories/: __init__.py  exchange.py  generic.py  market.py  otp.py  token.py  user.py
app/core/security/: config.py  permissions.py  security.py
app/models/: market.py
app/routes/admin/: addmin_approve_data.py  admin_conductor.py  admin_controller.py  admin_exchanges.py  admin_people.py  admin_platform.py  admin_roadmaps.py  admin_search.py  admin_security_audits.py  admin_token_stats.py  admin_tokens.py  admin_users.py  admin_wallets.py  main_admin.py
app/routes/auth/: __init__.py  base.py  oauth.py  otp.py  password_change.py  protected.py
app/routes/data/: exchanges.py  favorites_tokens.py  market_global.py  markets.py  tokens.py  websocket.py
app/routes/data/token/: halal.py
app/schemas/: chart.py  market.py  market_global.py  people_audit.py  token.py  user.py  wallte_conductors.py
app/services/admin/: coingecko_search_service.py
app/services/auth/: auth_service.py  email_service.py  otp_service.py
app/services/market/: coingecko_service.py  market_service.py  utils.py  websocket_manager.py
app/services/market/global_data/: coinmarket_cap_global_service.py  coinmarket_cap_service.py  (+1 more)
tests/: test_websocket.py
(+1 files in other folders)
